tools/tests/errors/surf_arity_05.ki
# param type annotation violated: Float param given a Bool
var f = Function(x : Float):
    return x
discard f(True)
